test/langtools/tools/javac/LocalClassCtorPrologue.out
LocalClassCtorPrologue.java:16:17: compiler.err.cant.ref.before.ctor.called: x
LocalClassCtorPrologue.java:40:21: compiler.err.cant.ref.before.ctor.called: x
- compiler.note.preview.filename: LocalClassCtorPrologue.java, DEFAULT
- compiler.note.preview.recompile
2 errors
